fix hero image positioning, inline scrollers sizing and text wrapping in the navbar for large screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,6 +55,7 @@ nav, .navbar{
     display: flex;
     justify-content: center;
     align-items: center;
+    top: 20px;
 }
 
 .header h1{
@@ -132,9 +133,7 @@ nav, .navbar{
         margin-left: 3%;
     }
 
-    div, .dropdown{
-        top: 20px;
-    }
+    
 
     /* inline scroller styles */
     .card-scroller{
@@ -169,6 +168,15 @@ nav, .navbar{
         left: 20px;
         top: 18px;
     }
+
+    div, .dropdown{
+        top: 0px;
+    }
+
+    .nav-link{
+        text-wrap: nowrap;
+    }
+
 
     /* inline scroller styles */
     .card-scroller{
